experiments/0007-language-fundamentals-survey/results.log
═══════ 01_fn_vs_def.mojo ═══════
=== MOJO-5: fn vs def ===

[정상 호출]
  fn add_fn(3, 4) = 7
  def add_def(3, 4) = 7

[raises 명시 — 0.26부터는 fn/def 모두 명시 필요]
  fn/def 모두 raise 하려면 'raises' 명시. (이전 버전의 def 묵시적 raises는 0.26에서 제거됨.)
  caught from fn: div by zero (fn raises)
  caught from def: div by zero (def + raises)

[타입 strict — 컴파일 시점 거부]
  fn은 일반적으로 args/return 타입 명시 필수.
  타입이 안 맞으면 컴파일 에러 (런타임 도달 불가).
  def도 타입을 적으면 fn처럼 컴파일 검사하지만,
  Python 호환 모드에서는 더 느슨할 수 있음.

═══════ 02_struct_vs_class.mojo ═══════
=== MOJO-6: struct(Mojo) vs class(Python) — value vs reference ===

[Mojo struct — value semantics]
  p1 = Point(10, 20)
    [Point.__copyinit__ x= 10 y= 20 ]
  var p2 = p1.copy()   ← __copyinit__ 호출 (명시적)
  p2.x = 999 후:
    p1.x = 10 (영향 없음 ← value)
    p2.x = 999

  read_point(p1)   ← read borrow, copy 안 일어남
  read_point sees x = 10

[Python class — reference semantics, 비교용]
  pp1 = PyPoint(10, 20)
  pp2 = pp1
  pp2.x = 999 후:
    pp1.x = 999 (같이 바뀜 ← reference)
    pp2.x = 999

[정리]
  Mojo struct: 대입은 __copyinit__ — 별개 인스턴스, value semantics (C++ struct과 동일)
  Python class: 대입은 reference 복사 — 같은 객체 공유

═══════ 03_numeric_types.mojo ═══════
=== MOJO-7: 수치 타입 ===

[Range — bit width를 MIN/MAX로 입증]
  Int8.MIN  = -128  MAX  = 127   (signed 8-bit: -128..127)
  Int16.MIN = -32768  MAX = 32767  (signed 16-bit)
  Int32.MIN = -2147483648  MAX = 2147483647  (signed 32-bit)
  Int64.MIN = -9223372036854775808  MAX = 9223372036854775807
  UInt8.MIN = 0  MAX = 255   (unsigned 8-bit: 0..255)
  UInt32.MAX = 4294967295
  Int.MIN   = -9223372036854775808  MAX = 9223372036854775807  (플랫폼 의존, x86_64에서 64-bit)

[Overflow — 고정폭 정수의 wrap-around]
  Int8(127) + Int8(1) = -128   (2의 보수 wrap → -128)
  UInt8(255) + UInt8(1) = 0   (unsigned wrap → 0)

[Float 정밀도]
  1/3 in Float16 : 0.33325195
  1/3 in Float32 : 0.33333334
  1/3 in Float64 : 0.3333333333333333

[변환]
  Int32(42)        = 42
  Int(3.7)         = 3  (절단)
  Float64(42)      = 42.0

[C++ 비교]
  Mojo Int     ≈ C++ ssize_t/intptr_t (x86_64에서 64-bit)
  Mojo Int32   ≈ C++ int32_t  (cstdint)
  Mojo Float64 ≈ C++ double
  Mojo overflow는 wrap (Int8.MAX+1 = MIN 검증됨).
  C++23부터 signed wrap도 정의됨; 그 이전엔 UB.

═══════ 04_var_let.mojo ═══════
=== MOJO-8: var (let은 0.26부터 제거됨) ===

[var — 일반 가변 변수]
  var x = 10  → 10
  x = 20      → 20

[let — 더 이상 키워드가 아님 (이전 버전엔 immutable 선언이었음)]
  let y: Int = 30  ← 컴파일 에러 (별도 파일에서 검증)
  immutability는 'var' + 의도적 미재할당으로 표현하거나,
  파라미터 modifier(read = default in fn)로 표현.

[fn 파라미터 modifier로 표현되는 immutability]
  fn f(p: Int): ...           ← p는 읽기 전용 (default)
  fn f(read p: Int): ...      ← 명시적 동일
  fn f(mut p: Int): p += 1    ← 가변 참조
  fn f(var p: Int): ...       ← 함수가 소유 (consume)

[parameter — 컴파일 시점 상수]
  build_msg[6]() → compile-time N=6

═══════ 05_ownership.mojo ═══════
=== MOJO-9: 소유권/borrow checker ===

[1] read borrow — default 또는 'read']
  observe sees x = 7
  observe_explicit sees x = 7
  b는 여전히 살아있음, x = 7

[2] mut borrow — 가변 참조]
  modify 후 b.x = 107

[3] var (consume) — ^ transfer 필수]
  consume took x = 107
  consume 호출 끝, b는 더 이상 사용 불가 (다음 줄 풀면 컴파일 에러)

[4] consume에 ^ 안 붙이면? 같은 디렉토리 05b_no_transfer.mojo로 별도 검증]

[정리]
  default = read   ← Rust의 &T
  mut              ← Rust의 &mut T (Mojo는 inout 키워드 폐기)
  var              ← Rust의 T move (Mojo는 owned 키워드 폐기)
  ^ transfer       ← Rust의 std::move 또는 함수 인자 move
  Copyable trait이 있으면 ^ 없이도 자동 copy 시도됨

═══════ 04b_let_compile_error.mojo (의도된 에러) ═══════
/home/hwan/workspace/mojo/experiments/0007-language-fundamentals-survey/04b_let_compile_error.mojo:3:5: error: use of unknown declaration 'let'
    let y: Int = 30
    ^~~
/home/hwan/workspace/mojo/experiments/0007-language-fundamentals-survey/04b_let_compile_error.mojo:3:9: error: statements must start at the beginning of a line
    let y: Int = 30
        ^
/home/hwan/workspace/mojo/.venv/bin/mojo: error: failed to parse the provided Mojo source module

═══════ 05b_no_transfer.mojo (의도된 에러) ═══════
/home/hwan/workspace/mojo/experiments/0007-language-fundamentals-survey/05b_no_transfer.mojo:11:13: error: value of type 'Box' cannot be implicitly copied, it does not conform to 'ImplicitlyCopyable'
    consume(b)         # ← ^ 없음 → ImplicitlyCopyable 미준수로 에러
/home/hwan/workspace/mojo/experiments/0007-language-fundamentals-survey/05b_no_transfer.mojo:11:13: note: consider transferring the value with '^'
    consume(b)         # ← ^ 없음 → ImplicitlyCopyable 미준수로 에러
/home/hwan/workspace/mojo/.venv/bin/mojo: error: failed to parse the provided Mojo source module
